# bima-mcp

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
ci/: README.md
src/bima_mcp/: __init__.py  main.py
tests/: test_smoke.py
