[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bima-mcp"
version = "0.1.0"
description = "MCP server for Kenya insurance intelligence — NHIF, parametric crop risk, microinsurance comparison"
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "insurance", "kenya", "africa", "nhif", "parametric", "microinsurance", "bima"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["fastmcp>=2.0.0"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/bima-mcp"
Repository = "https://github.com/gabrielmahia/bima-mcp"
Issues = "https://github.com/gabrielmahia/bima-mcp/issues"

[project.scripts]
bima-mcp = "bima_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
